--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "i18next-browser-languagedetector": "^8.2.0",
     "i18next-http-backend": "^3.0.2",
     "input-otp": "^1.4.2",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.462.0",
     "next": "^16.1.1",
     "react": "^19.2.3",
@@ -72,6 +73,7 @@
     "@eslint/js": "^9.32.0",
     "@tailwindcss/postcss": "^4.1.18",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
