--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     ],
     "paths": {
       "@/*": ["./src/client/*"],
-      "@App/*": ["./src/app/*"]
+      "@App/*": ["./src/app/*"],
+      "@lib/*": ["./src/lib/*"]
     }
   }
 }
