--- a/package.json
+++ b/package.json
@@ -48,14 +48,17 @@
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.29.0",
     "i18next": "^25.7.4",
     "i18next-browser-languagedetector": "^8.2.0",
     "i18next-http-backend": "^3.0.2",
     "input-otp": "^1.4.2",
     "js-cookie": "^3.0.5",
+    "lenis": "^1.3.17",
     "lucide-react": "^0.462.0",
     "next": "^16.1.1",
     "react": "^19.2.3",
+    "react-card-flip": "^1.2.3",
     "react-dom": "^19.2.3",
     "react-hook-form": "^7.61.1",
     "react-i18next": "^16.5.2",
